Fix overflow and compression issues on carousel images. Adjust left/right arrow divs as they were changed to include a button

--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,7 @@ body {
 
 .img-wrapper div.img-selected {
     grid-area: 1 / 2 / 2 / 3;
+    overflow: hidden;
 }
 
 .img-wrapper div.img-selected img {
@@ -213,14 +214,15 @@ body {
 
 .img-wrapper div.fade-in {
     grid-area: 1 / 3 / 2 / 4;
+    overflow: hidden;
 }
 
 .img-wrapper div.fade-in img {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 200%;
+    height: 300px;
     object-fit: cover;
-    object-position: 0% 0%;
+    object-position: 50% 80%;
 }
 
 
@@ -241,13 +243,17 @@ body {
 .carousel-wrapper .central-display {
     grid-area: 1 / 2 / 2 / 3;
     width: 100%;
+    height: 300px;
     background-color: transparent;
     box-shadow: 0px 5px 8px 0px gray;
+    overflow: hidden;
 }
 
 .carousel-wrapper .fade-in-display {
+    height: 300px;
     background: linear-gradient(90deg, rgba(255, 255, 255, 0.564) 50%, var(--columbia-blue-light));
-    box-shadow: -2px 1px 5px 0px rgb(173, 173, 173);
+    box-shadow: -2px 2px 2px 0px rgb(173, 173, 173);
+    overflow: hidden;
 }
 
 
@@ -273,7 +279,7 @@ body {
     display: flex;
     align-items: center;
     /* border: 1px solid white; */
-    cursor: pointer;
+    
     overflow: hidden;
 }
 
@@ -284,6 +290,13 @@ body {
 .interactive-display div.right-arrow {
     grid-area: 2 / 3 / 3 / 4;
     justify-self: flex-end;
+}
+
+.interactive-display .left-arrow button,
+.interactive-display .right-arrow button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
 }
 
 .interactive-display .left-arrow img,
